# GRACE-HPC

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: api.md  cli.md  conf.py  configuration.md  faqs.md  features.md  function.md  index.rst  inputs_outputs.md  installation.md  introduction.md  jupyter.md  methodology.md  requirements.txt  usage.md
docs/_static/: custom.css
example_uses/: command_line_example.md  function_example.ipynb  jupyter_interface_example.html  jupyter_interface_example.ipynb  jupyter_interface_example.md
example_uses/example_hpc_config_files/: I3_example_config.yaml  IAI_example_config.yaml
gracehpc/: __init__.py  cli.py  config.py  jupyter.py  script.py
gracehpc/core/: __init__.py  backend_utils.py  emissions_calculator.py  job_log_manager.py
gracehpc/interface/: cli_script_output.py  jupyter_output.py
