[project]
name = "gracehpc"
version = "0.1.0"
description = "HPC energy and carbon emissions toolkit"
authors = [
    {name = "Elliot Ayliffe",email = "Elliot.ayliffe@gmail.com"}
]
readme = "README.md"
packages = [{ include = "gracehpc" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "jupyterlab (>=4.4.4,<5.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "widgetsnbextension (>=4.0.14,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

keywords = ["HPC", "carbon", "emissions", "SLURM", "sustainability", "energy", "GRACE"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gracehpc = "gracehpc.cli:main"


