[project]
name = "gracehpc"
version = "0.1.0"
description = "HPC energy and carbon emissions toolkit"
authors = [
    {name = "Elliot Ayliffe",email = "Elliot.ayliffe@gmail.com"}
]
readme = "README.md"
license = "MIT"
packages = [{ include = "gracehpc" }]
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas==2.3.1",
    "ipykernel==6.29.5",
    "numpy==2.3.1",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "pytz==2025.2",
    "ipython==9.4.0",
    "ipywidgets==8.1.7",
    "plotly==6.2.0",
    "rich==14.0.0",
    "jupyterlab==4.4.4",
    "notebook==7.4.4",
    "widgetsnbextension==4.0.14",
    "jupyter==1.1.1"
]

keywords = ["HPC", "carbon", "emissions", "SLURM", "sustainability", "energy", "GRACE"]

[project.urls]
"Documentation" = "https://grace-hpc.readthedocs.io/en/latest/"
"Source" = "https://github.com/Elliot-Ayliffe/GRACE-HPC"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gracehpc = "gracehpc.cli:main"


